// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Test with custom header 1`] = `
<DocumentFragment>
  <header
<<<<<<< HEAD
    class="pf-v6-c-modal-box__header"
=======
    class="pf-v5-c-modal-box__header"
>>>>>>> main
  >
    <span
      id="test-custom-header"
    >
      TEST
    </span>
  </header>
</DocumentFragment>
`;

exports[`ModalHeader Test 1`] = `
<DocumentFragment>
  <header
<<<<<<< HEAD
    class="pf-v6-c-modal-box__header"
=======
    class="pf-v5-c-modal-box__header"
>>>>>>> main
  >
    This is a ModalBox header
  </header>
</DocumentFragment>
`;

exports[`ModalHeader help renders 1`] = `
<DocumentFragment>
  <header
<<<<<<< HEAD
    class="pf-v6-c-modal-box__header pf-m-help"
  >
    <div
      class="pf-v6-c-modal-box__header-main"
=======
    class="pf-v5-c-modal-box__header pf-m-help"
  >
    <div
      class="pf-v5-c-modal-box__header-main"
>>>>>>> main
    >
      This is a ModalBox header
    </div>
    <div
<<<<<<< HEAD
      class="pf-v6-c-modal-box__header-help"
=======
      class="pf-v5-c-modal-box__header-help"
>>>>>>> main
    >
      <div>
        test
      </div>
    </div>
  </header>
</DocumentFragment>
`;
